[fix] scroll speed on mobile & tablet

--- a/src/scss/02-base/_base.scss
+++ b/src/scss/02-base/_base.scss
@@ -17,6 +17,7 @@
 }
 
 body {
+  height: 100%;
   background-color: var(--bg_color);
 }
 
@@ -28,7 +29,7 @@ body {
   height: 100vh;
   transform-origin: center right;
   transition: transform 0.3s, opacity 0.3s;
-  .scrollbar_thumb {
+  .c-scrollbar_thumb {
     position: absolute;
     top: 0;
     right: 0;
